// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkNudger should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      null,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 40,
        },
        Object {
          "marginRight": 4,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Decrease"
      accessible={true}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "borderless": true,
          "color": null,
          "type": "RippleAndroid",
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderColor": "rgb(230, 228, 235)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 8,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(0, 178, 214)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "lineHeight": 20,
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": -0.4,
        },
        Object {
          "fontFamily": "sans-serif-medium",
        },
        Object {
          "minWidth": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    3
  </Text>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 40,
        },
        Object {
          "marginLeft": 4,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Increase"
      accessible={true}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "borderless": true,
          "color": null,
          "type": "RippleAndroid",
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderColor": "rgb(230, 228, 235)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 8,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(0, 178, 214)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "lineHeight": 20,
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkNudger should render correctly when value is a not an integer 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      null,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 40,
        },
        Object {
          "marginRight": 4,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Decrease"
      accessible={true}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "borderless": true,
          "color": null,
          "type": "RippleAndroid",
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          Object {
            "backgroundColor": "rgb(230, 228, 235)",
            "borderColor": "rgb(230, 228, 235)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 8,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(178, 174, 189)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "lineHeight": 20,
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": -0.4,
        },
        Object {
          "fontFamily": "sans-serif-medium",
        },
        Object {
          "minWidth": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    1
  </Text>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 40,
        },
        Object {
          "marginLeft": 4,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Increase"
      accessible={true}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "borderless": true,
          "color": null,
          "type": "RippleAndroid",
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderColor": "rgb(230, 228, 235)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 8,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(0, 178, 214)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "lineHeight": 20,
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkNudger should render correctly when value is greater than max 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      null,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 40,
        },
        Object {
          "marginRight": 4,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Decrease"
      accessible={true}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "borderless": true,
          "color": null,
          "type": "RippleAndroid",
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderColor": "rgb(230, 228, 235)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 8,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(0, 178, 214)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "lineHeight": 20,
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": -0.4,
        },
        Object {
          "fontFamily": "sans-serif-medium",
        },
        Object {
          "minWidth": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    3
  </Text>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 40,
        },
        Object {
          "marginLeft": 4,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Increase"
      accessible={true}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "borderless": true,
          "color": null,
          "type": "RippleAndroid",
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          Object {
            "backgroundColor": "rgb(230, 228, 235)",
            "borderColor": "rgb(230, 228, 235)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 8,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(178, 174, 189)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "lineHeight": 20,
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android BpkNudger should render correctly when value is less than min 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      null,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 40,
        },
        Object {
          "marginRight": 4,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Decrease"
      accessible={true}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "borderless": true,
          "color": null,
          "type": "RippleAndroid",
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          Object {
            "backgroundColor": "rgb(230, 228, 235)",
            "borderColor": "rgb(230, 228, 235)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 8,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(178, 174, 189)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "lineHeight": 20,
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
          "letterSpacing": -0.4,
        },
        Object {
          "fontFamily": "sans-serif-medium",
        },
        Object {
          "minWidth": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    3
  </Text>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "borderRadius": 40,
        },
        Object {
          "marginLeft": 4,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Increase"
      accessible={true}
      isTVSelectable={true}
      nativeBackgroundAndroid={
        Object {
          "borderless": true,
          "color": null,
          "type": "RippleAndroid",
        }
      }
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderWidth": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
            "paddingVertical": 6,
          },
          Object {
            "backgroundColor": "rgb(255, 255, 255)",
            "borderColor": "rgb(230, 228, 235)",
            "borderRadius": 40,
          },
          Object {
            "flexDirection": "row-reverse",
          },
          Object {
            "paddingHorizontal": 8,
          },
        ]
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "BpkIcon",
              "fontSize": 24,
              "includeFontPadding": false,
            },
            Object {
              "fontSize": 16,
            },
            Array [
              Object {
                "marginEnd": 4,
              },
              Object {
                "color": "rgb(0, 178, 214)",
              },
              Object {
                "marginEnd": 0,
                "marginStart": 4,
              },
              Object {
                "lineHeight": 20,
                "marginEnd": 0,
                "marginStart": 0,
              },
            ],
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;
